--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
         <!-- endbuild -->
 
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
   <body ng-app="dashboardApp">
     <!--[if lt IE 7]>
@@ -56,6 +57,7 @@
 
     <script src="scripts/services/api.js"></script>
     <script src="scripts/services/analytics.js"></script>
+    <script src="scripts/services/filter-events.js"></script>
 
     <script src="scripts/infrastructure/authorization.js"></script>
     <script src="scripts/infrastructure/config.js"></script>
